--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,9 +6,48 @@
     android:layout_height="match_parent"
     tools:context="com.companyname.simplequiz.MainActivity">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="12dp"
+                android:background="#cfcfcf"
+                android:layout_margin="15dp"
+                android:textSize="25sp"
+                android:text="@string/dashboard"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="12dp"
+                android:background="#cfcfcf"
+                android:layout_margin="15dp"
+                android:textSize="25sp"
+                android:text="@string/start_game"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="12dp"
+                android:background="#cfcfcf"
+                android:layout_margin="15dp"
+                android:textSize="25sp"
+                android:text="@string/settings"/>
+        </LinearLayout>
+    </ScrollView>
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="17dp"
+        android:textColor="@color/colorAccent"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        android:text="@string/made_with_love_3" />
 
 </RelativeLayout>
